# diffusiongemma-visualized

./: 0.checkreqs.sh  0.installreqs.sh  1.launch.sh  FIXPLEASE.md  IMPLEMENTATION.md  README.md  app.py  message.txt  pyproject.toml
.streamlit/: config.toml
docs/2026-06-10-vllmdocs-diffusion-gemma/: LICENSE
docs/2026-xx-parallelism/: EXTRA.txt
pages/: 1_canvas_denoising.py  2_entropy_bound.py  3_self_conditioning.py  4_block_sampling.py  5_encoder_decoder.py  6_attention_mechanisms.py  7_terms_glossary.py
utils/: canvas_tutorial.py  diffusion_sim.py  glossary.py  navigation.py  plot_helpers.py  styles.py
