[project]
name = "diffusiongemma-visualized"
version = "0.1.0"
description = "Interactive visualization of DiffusionGemma internals"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
